# LogCat

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  window.rs
src-tauri/src/ssh/: error.rs  files.rs  mod.rs  parsing.rs  session.rs  state.rs  system_ssh.rs  tail.rs  types.rs
src/components/hosts/: HostModal.vue  HostsDashboard.vue
src/components/layout/: ActivityBar.vue  TitleBar.vue
src/components/logs/: CreateEntryModal.vue  LogSidebar.vue  LogViewer.vue  LogsWorkspace.vue  PermissionModal.vue  RenameEntryModal.vue
src/composables/: useLogCatApp.ts
src/styles/: app.css
src/types/: app.ts
src/utils/: logHighlight.ts
